[project]
name = "567-Project"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
        "jupyter>=1.1.1",
        "tqdm",
        "numpy",
        "matplotlib",
        "torch", "torchrl", 
	"benchmarl", "id-marl-eval",
        "gymnasium", "vmas", "pettingzoo[all]", # "dm-meltingpot", "git+https://github.com/Farama-Foundation/MAgent2",
]
